@@ -1,3 +1,8 @@
+2004-01-08  David Schleef  <ds@schleef.org>
+
+	* gst/videodrop/gstvideodrop.c: (gst_videodrop_getcaps),
+	(gst_videodrop_link), (gst_videodrop_init): Fix negotiation.
+
 2004-01-08  Julien MOUTTE,,,  <julien@moutte.net>
 
 	* sys/ximage/ximagesink.c: (gst_ximagesink_handle_xevents): A
